--- a/読書感想文：なれるＳＥ.md
+++ b/読書感想文：なれるＳＥ.md
@@ -1,4 +1,4 @@
-※書き手が学生という設定のため、文体は若干意識して崩しています。その他詳細は、Readmeをご参照下さい。
+※書き手が学生という設定です。なお、文中の一人語りはフィクションです。その他詳細は、Readmeをご参照下さい。
 
 ## 読書感想文　～なれるＳＥ～
 　  
