--- a/読書感想文：なれるＳＥ.md
+++ b/読書感想文：なれるＳＥ.md
@@ -1,6 +1,6 @@
 ※書き手が学生という設定です。なお、文中の一人語りはフィクションです。その他詳細は、Readmeをご参照下さい。
 
-## 読書感想文　～なれるＳＥ～
+## 本を１行だけ読んで書く読書感想文　～なれるＳＥ～
 　  
 自分は将来、何になるのだろう。何になりたいのだろう。  
 世の中には様々な職業がある。  
