--- a/読書感想文：なれるＳＥ.md
+++ b/読書感想文：なれるＳＥ.md
@@ -1,4 +1,4 @@
-※書き手が学生という設定です。なお、文中の一人語りはフィクションです。その他詳細は、Readmeをご参照下さい。
+※書き手が学生という設定です。なお、文中の一人語りはフィクションです。その他詳細は、[README](https://github.com/kakisoft/WeCanWriteReadingSentencesOnlyRead1Page/blob/master/README.md)をご参照下さい。
 
 ## 本を１行だけ読んで書く読書感想文　～なれるＳＥ～
 　  
@@ -33,4 +33,4 @@
 この本は、自分の進路としてＩＴ業界に進むのは止めておいたいいのかな。と思わせてくれるには十分な内容だった。　  
 
 ***
-※あくまでネタです。詳細はReadmeをご参照下さい。ちなみにシリーズは完結巻まで全て読みました。しかし、１巻の内容など、とうの昔に忘れ去っており、手法として使えそうだったため、テーマとして選択しました。
+※あくまでネタです。詳細は[README](https://github.com/kakisoft/WeCanWriteReadingSentencesOnlyRead1Page/blob/master/README.md)をご参照下さい。ちなみにシリーズは完結巻まで全て読みました。しかし、１巻の内容など、とうの昔に忘れ去っており、手法として使えそうだったため、テーマとして選択しました。
